examples/k8stest/conf/TCPRoute/Basic/TCPRoute_filtered.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: test-tcp-filtered
  namespace: edgion-test
  annotations:
    # Reference EdgionStreamPlugins using annotation
    edgion.io/edgion-stream-plugins: test-ip-filter
spec:
  parentRefs:
    - name: tcp-test-gateway
      namespace: edgion-test
      sectionName: tcp-filtered
  rules:
    - backendRefs:
        - name: test-tcp
          port: 30010
          weight: 100
